--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,7 +13,10 @@ ul{
 
   display: flex;
   flex-direction: row;
-gap: 35px;
+  flex-wrap: wrap-reverse;
+gap: 15px;
+
+/* justify-content: center; */
 }
 li,span{
   list-style-type: none;
@@ -21,6 +24,7 @@ li,span{
   color: white;
   padding: 7px;
   margin: 7px;
+  max-width: fit-content;
 }
 .socials{
   border: 0px;
@@ -236,29 +240,40 @@ label{
 .qrcode{
   display: none;
 }
+#whatsapp{
+  color: green;
+  text-decoration: underline;
+}
 
-
-@media screen and (max-width:600px) {
+@media screen and (max-width:768px) {
   body{
     width: 100vw;
     height: 100vh;
+  }
+ 
+  .card-types{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+  }
+  nav{
+    width: 100vh;
+    height: 10vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 3px;
+  }
+  a{
+    font-size: smaller;
+    
   }
   li{
     padding: 2px;
     margin: 2px;
     border: 1px solid white;
-  }
-  .card-types{
-    display: flex;
-    flex-direction: column;
-  }
-  nav{
-    width: 100vw;
-    height: 10vh;
-  }
-  a{
-    font-size: smaller;
-    
+    width: fit-content;
+    height: auto;
   }
   #welcome{
     font-size: medium;
@@ -285,5 +300,18 @@ label{
     width: 50px;
     height: 50px;
   }
+  #companyName{
+    font-size: 50%;
+  }
+  #posterImage{
+    width: 90vw;
+    height: auto;
+  
+  }
+  .poster-container {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
 }
 
