--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,7 @@ body{
   background-size: cover;
   width: 100vw;
   height: 100vh;
-  background-image: url('../app/Images/Website-Backgrounds-For-Desktop.jpg');
+  background-image: url('../app/Images/newbg.jpg');
   background-size: cover;
 }
 ul{
